[BUG FIX] Fix dark mode (#1341)
* remove committed mneisa db

* fix dark mode inconsistencies
adjust dark mode colors
hide depedency sass warnings

* fix objectives page
fix theme style scoping

* refactor help button
move new project button

* add example image to projects card links

* fix curriculum view

* change help icon

* fix some style scoping issues

* adjust style precedence and remove duplicate styles
fix code block styles

* widen editors to better match delivery
fit admin banner

* fix a bunch of dark mode issues including hardcoded white values

* remove commented
disable correct after evaluation

* fix issue template

* fix an issue where trying to select text results in moving content block
fix add resource button color in dark mode

* fix blockquotes

* cleanup hints in dark mode

* Update .gitignore


* Update assets/static/images/icons/life-ring-regular.svg

--- a/assets/styles/authoring/layout/workspace.scss
+++ b/assets/styles/authoring/layout/workspace.scss
@@ -3,7 +3,7 @@ $workspace-sidebar-width: 65px;
 
 #nprogress .spinner {
   top: 10px;
-  right: 88px;
+  right: 4px;
 }
 
 .workspace {
@@ -35,7 +35,7 @@ $workspace-sidebar-width: 65px;
         display: block;
         position: absolute;
         bottom: -4px;
-        content: '';
+        content: "";
         width: 0;
         height: 0;
         border-style: solid;
@@ -94,10 +94,9 @@ $workspace-sidebar-width: 65px;
 
   .workspace-header {
     width: 100%;
-    padding: 6px 37px 3px 20px;
+    padding: 16px 32px;
     position: relative;
     background-color: $workspace-header-bg;
-    border-bottom: 1px solid rgb(213, 207, 207);
 
     h2 {
       margin-bottom: 4px;
@@ -126,6 +125,7 @@ $workspace-sidebar-width: 65px;
     padding-top: 2px;
     font-size: 0.9em;
     font-weight: 600;
+    margin-right: 10px;
   }
 
   .custom-breadcrumb {
